[package]
name = "actress"
version = "0.1.0"
authors = ["Jonathan Turner"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jonathandturner/actress"
homepage = "https://github.com/jonathandturner/actress"
description = """
A simple actor library for Rust
"""
include = [
    "**/*.rs",
    "Cargo.toml",
]